# deadlands

./: .gitignore  LICENSE  default.nix
common/: .dir-locals.el  common.cabal  package.yaml
common/scripts/: hpack  test-loop
common/src/Common/: CharacterSheet.hs  DiceSet.hs  Effects.hs  Strings.hs
common/tests/: test.hs
common/tests/Common/: CharacterSheetTest.hs  DiceSetTest.hs  StringTest.hs
frontend/: frontend.cabal  package.yaml
frontend/scripts/: repl
frontend/src/: Frontend.hs
frontend/src/Frontend/: CombatTracker.hs  CopyPasta.hs  Internal.hs  Spells.hs  Style.hs  Traits.hs  Wounds.hs
