name: common
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , dependent-map
    , dependent-sum
    , lens
    , nat
    , text

  exposed-modules:
    Common.Api
    Common.CharacterSheet
    Common.DiceSet

test-suite tests
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
      src
    , tests
  main-is:
    test.hs
  build-depends:
      base
    , dependent-map
    , dependent-sum
    , lens
    , nat
    , tasty
    , tasty-hunit
    , text
    , common
