name: common
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , containers
               , lens
               , nat
    , text
               , text
  ghc-options: -Wall
  exposed-modules:
    Common.Api
    Common.Route
    Common.DiceSet
    Common.CharacterSheet
    Common.Strings
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Common.CharacterSheetTest
      Common.DiceSetTest
      Common.StringTest
  hs-source-dirs:
      tests
  ghc-options: -Wall
  build-depends:
      base
    , common
    , containers
    , lens
    , nat
    , tasty
    , tasty-discover
    , tasty-hunit
    , text
  default-language: Haskell2010
