name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , clay
               , common
               , containers
               , dependent-map
               , endo
               , ghcjs-dom
               , jsaddle
               , lens
               , nat
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-route
               , reflex
               , reflex-dom
               , safe
               , semigroupoids
               , text
  exposed-modules:
    Frontend
  other-modules:
      Frontend.CopyPasta
    , Frontend.Internal
    , Frontend.Spells
    , Frontend.Style
    , Frontend.Traits
    , Frontend.Wounds
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , frontend
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-route
               , reflex-dom
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
